--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,12 @@ build:
     - su -c "mkdir -p ~/var/check_mk/packages/" -s /bin/sh cmk
     - su -c "./copy-to-target.sh" -s /bin/sh cmk
   script:
-    - su -c 'source ~/.bashrc; cmk -P pack tecnair' -s /bin/bash cmk
+    - su -c 'source ~/.bashrc; cmk -P pack transceivers' -s /bin/bash cmk
     # test if mkp package exists
-    - ls /omd/sites/cmk/tecnair-*.mkp
-    - mv /omd/sites/cmk/tecnair-*.mkp .
+    - ls /omd/sites/cmk/transceivers-*.mkp
+    - mv /omd/sites/cmk/transceivers-*.mkp .
   artifacts:
     paths:
-      - tecnair-*.mkp 
+      - transceivers-*.mkp 
 
 
